crates/core/tests/snapshots/snapshots__hex_to_utf8_conversion.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 132
expression: utf8_conv
---
{
  "value": {
    "type": "String",
    "value": "Hello"
  },
  "target_format": "utf8",
  "display": "Hello",
  "path": [
    "hex",
    "utf8"
  ],
  "steps": [
    {
      "format": "utf8",
      "value": {
        "type": "String",
        "value": "Hello"
      },
      "display": "Hello"
    }
  ],
  "is_lossy": false,
  "priority": "Encoding",
  "kind": "Conversion"
}
