crates/core/tests/snapshots/snapshots__json_object_interpretation.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 220
expression: "&result.interpretation"
---
{
  "value": {
    "type": "Json",
    "value": {
      "name": "test",
      "value": 42
    }
  },
  "source_format": "json",
  "confidence": 0.95,
  "description": "JSON object"
}
